config/manager/manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bqrator
  namespace: nais
  labels:
    app: bqrator
    team: aura
spec:
  selector:
    matchLabels:
      app: bqrator
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: bqrator
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: bqrator
    spec:
      securityContext:
        runAsNonRoot: true
      imagePullSecrets:
      - name: gh-docker-credentials
      containers:
      - command:
        - /manager
        image: ghcr.io/nais/bqrator:latest
        name: bqrator
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
      serviceAccountName: bqrator
      serviceAccount: bqrator
      terminationGracePeriodSeconds: 10
