config/manager/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bqrator-apiserver
  namespace: nais
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.2/32
  podSelector:
    matchLabels:
      app: bqrator
  policyTypes:
  - Egress
